--- a/SeyehatProjesi/Views/Shared/_Style.cshtml
+++ b/SeyehatProjesi/Views/Shared/_Style.cshtml
@@ -36,7 +36,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <img src="~/web/images/contact.png" alt="">
                 </div>
                 <div class="grid1-l-desc">
-                    <p>Contact : +91 00000-55555</p>
+                    <p>Whatsapp : +5084546585</p>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <li><a class="hsubs" href="@Url.Action("Index", "About")">Hakkımızda</a></li>
 
                 <li>
-                    <a class="hsubs" href="destinations.html">Rehber</a>
+                    <a class="hsubs" href="#">Rehber</a>
                     <ul class="subs">
                         <li><a href="#">Oteller</a></li>
                         <li><a href="#">Restoranlar</a></li>
@@ -58,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </ul>
                 </li>
                 <li><a class="hsubs" href="@Url.Action("Index", "Blog")">Blogum</a></li>
-                <li><a href="contact.html">İletişim</a></li>
+                <li><a href="@Url.Action("Contact", "Default")">İletişim</a></li>
             </ul>
         </div>
     </div>
