--- a/SeyehatProjesi/Views/Default/Index.cshtml
+++ b/SeyehatProjesi/Views/Default/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="wrap">
         <div class="banner">
             <div class="indent">
-                <h2 class="indent-left margin-bot">Plan the Easy Trip</h2>
+                <h2 class=""  style="margin-left:85px;">Tatil & Seyehat Blogum</h2>
                 <div class="banner-left">
                     <div class="con-text">
                         <div class="grid1-img">
@@ -69,78 +69,17 @@
     <div class="wrap">
         <div class="wrapper">
             <div class="con-top">
-                <h3>Tatil Seyahat Bloguma Hoşgeldiniz</h3>
+                <h3 >Tatil Seyahat Bloguma Hoşgeldiniz</h3>
                 <p>Tatil ve seyahat, hayatın stresinden uzaklaşıp yeni yerler keşfetmenin en güzel yollarından biridir. Blogumda, yurt içi ve yurt dışında ziyaret edebileceğiniz en gözde destinasyonlardan, gizli kalmış güzelliklere kadar pek çok yeri tanıtmayı amaçlıyorum. Sadece ünlü turistik yerleri değil, aynı zamanda doğayla iç içe olabileceğiniz, kalabalıktan uzak ve huzur dolu köşeleri de keşfetmenize yardımcı olacak ipuçlarını burada bulabilirsiniz.</p>
                 <p>Bu blogda; konaklama tavsiyelerinden, seyahatinizi kolaylaştıracak pratik önerilere, gezi sırasında tadabileceğiniz lezzetlerden, tarihi yerlerin büyüleyici hikayelerine kadar birçok farklı konuda bilgi paylaşımında bulunuyorum. Ayrıca seyahat fotoğrafları çekmek, yolculuk sırasında yanınıza almanız gerekenler ve bütçe dostu seyahat yöntemleri gibi konular </p>
             </div>
 
             <div class="grids">
                 <div class="box1">
-                    <div class="padding">
-                        <h4>This Week's Top 10</h4>
-                        <ul class="list list-pad">
-                            <li class="list-bg"><span>1.</span><a href="#">formas humanitatis pe</a></li>
-                            <li class="list-bg1"><span>2.</span><a href="#">congue nihil imperdiet</a></li>
-                            <li class="list-bg"><span>3.</span><a href="#">Aadipisicing elit sed do</a></li>
-                            <li class="list-bg1"><span>4.</span><a href="#">luptatum zzril  </a></li>
-                            <li class="list-bg"><span>5.</span><a href="#">Claritas est etiam</a></li>
-                            <li class="list-bg1"><span>6.</span><a href="#">claritatem insitam;</a></li>
-                            <li class="list-bg"><span>7.</span><a href="#">velit esse molestie consequa</a></li>
-                            <li class="list-bg1"><span>8.</span><a href="#">nostrud exerci tation ulla</a></li>
-                            <li class="list-bg"><span>9.</span><a href="#">demonstraverunt lectores</a></li>
-                            <li class="list-bg1"><span>10.</span><a href="#">dolore te feu</a></li>
-                        </ul>
-                        <a href="#" class="link1">See all hotels</a>
-                    </div>
-                    <div class="padding1">
-                        <h4>Our Best Places</h4>
-                        <div class="box-left">
-                            <div class="bot-img">
-                                <img src="~/web/images/pic3.jpg" alt="" />
-                            </div>
-                            <div class="bot-desc">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="bot-img">
-                                <img src="~/web/images/pic7.jpg" alt="" />
-                            </div>
-                            <div class="bot-desc">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="bot-img">
-                                <img src="~/web/images/pic8.jpg" alt="" />
-                            </div>
-                            <div class="bot-desc">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
-                            </div>
-                            <div class="clear"></div>
-                        </div>
-                        <div class="box1-left">
-                            <div class="bot-img">
-                                <img src="~/web/images/pic9.jpg" alt="" />
-                            </div>
-                            <div class="bot-desc1">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="bot-img">
-                                <img src="~/web/images/pic10.jpg" alt="" />
-                            </div>
-                            <div class="bot-desc1">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="bot-img">
-                                <img src="~/web/images/pic3.jpg" alt="" />
-                            </div>
-                            <div class="bot-desc1">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
-                            </div>
-                            <div class="clear"></div>
-                        </div>
-                    </div>
+                    @Html.Action("Partial1", "Default")
+                    @Html.Action("Partial2", "Default")
+                   
+        </div>
                     <div class="clear"></div>
                 </div>
             </div>
